Fix card broken layout

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -452,7 +452,7 @@
     display: block;
     width: 100%;
     max-width: 28rem;
-    height: 29rem;
+    height: 31rem;
     position: relative;
     background-color: $white;
     border-bottom-left-radius: 0.8rem;
